# LSMFAPI

./: .gitignore  CLAUDE.md  Dockerfile  README.md  RESUME.md  config.yml  config.yml.example  docker-compose.dev.yml  docker-compose.prd.yml  docker-compose.yml  pyproject.toml
.ai/: RESUME.md
.ai/context/: architecture.md  features.md
.ai/instructions/: 01-project-overview.md  02-backend-conventions.md  03-frontend-conventions.md  04-constraints.md  06-testing-conventions.md
.ai/prompts/: create-planning.md  new-feature.md  update-readme.md
.claude/: settings.local.json
.github/workflows/: docker-publish.yml  integration-test.yml
docs/: forecast-data-reference.md
scripts/: LSMF-dev.ps1  diag_interlaken.py  remote.ps1
src/lsmfapi/: _eccodes.py  config.py  scheduler.py
src/lsmfapi/api/: main.py
src/lsmfapi/api/routers/: accuracy.py  dashboard.py  forecast.py
src/lsmfapi/collectors/: base.py  grib_cache.py  icon_ch1_eps.py  icon_ch2_eps.py
src/lsmfapi/database/: cache.py  collection_state.py  db.py  models.py  telemetry.py
src/lsmfapi/models/: forecast.py
src/lsmfapi/services/: ensemble.py
static/: dashboard.html  dashboard.js  data.html  data.js  index.html  index.js  shared.css
tests/: test_e2e_collection.py
